Closed Bug 1846892 Opened 2 years ago Closed 1 year ago

Currently vendored WebGPU CTS does not test renamed `GPUShaderModule.getCompilationInfo`

Categories

(Core :: Graphics: WebGPU, defect, P3)

defect

Tracking

()

RESOLVED FIXED
129 Branch
Tracking Status
firefox129 --- fixed

People

(Reporter: ErichDonGubler, Assigned: ErichDonGubler)

References

Details

Attachments

(1 file)

Bug 1834558 re-vendored a CTS that tests GPUShaderModule.getCompilationInfo, which was renamed from compilationInfo. We need to remove the now-obsolete compilationInfo symbol, after we validate that things are working for getCompilationInfo.

Assignee: egubler → nobody
Flags: needinfo?(egubler)
Flags: needinfo?(egubler)
Summary: Currently vendored WebGPU CTS does not test renamed `GPUCompilation.getCompilationMessage` → Currently vendored WebGPU CTS does not test renamed `GPUCompilation.getCompilationInfo`
Summary: Currently vendored WebGPU CTS does not test renamed `GPUCompilation.getCompilationInfo` → Currently vendored WebGPU CTS does not test renamed `GPUShaderModule.getCompilationInfo`
Assignee: nobody → egubler
Status: NEW → ASSIGNED
Pushed by egubler@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a88f43983677 chore(webgpu)!: remove obsolete `GPUShaderModule.compilationInfo` r=webgpu-reviewers,webidl,nical,smaug
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch
No longer blocks: webgpu-triage
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: