Bug 1846892 - chore(webgpu)!: remove obsolete `GPUShaderModule.compilationInfo` r=webgpu-reviewers,webidl,nical,smaug

Differential Revision: https://phabricator.services.mozilla.com/D213175